Creates the onClick activity for the button in activity_pet_list.xml. Also creates helper function getUriToResource (thanks, Michael).

--- a/app/src/main/res/layout/activity_pet_list.xml
+++ b/app/src/main/res/layout/activity_pet_list.xml
@@ -28,7 +28,9 @@
         android:id="@+id/petImageView"
         android:layout_gravity="center_horizontal"
         android:layout_width="150dp"
-        android:layout_height="150dp" />
+        android:layout_height="150dp"
+        android:clickable="true"
+        android:onClick="selectPetImage" />
 
     <Button
         android:text="@string/add_button_text"
